# FoTruss

./: .gitignore  CMakeLists.txt  README.md  constant.h  main.cpp
Algorithm/: Algo.cpp  Algo.h  TrussOpt.cpp  TrussOpt.h
DataStructure/: Combo.cpp  Combo.h  EqualTree.cpp  EqualTree.h  MLGWithSchema.cpp  MLGWithSchema.h
Utils/: Timer.cpp
output/: FoTruss.INFO
test/: DecompositionTest.cpp  IndexConstructionTest.cpp  SOTATest.cpp  SearchTimeTest.cpp  testHeader.h
